--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "myScript" : "npx tsx src/app/scripts/scrapeData.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.2",
