--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "crons": [
     {
       "path": "/api/generate-daily-game",
-      "schedule": "0 0 * * *"
+      "schedule": "0 8 * * *",
+      "timezone": "America/Los_Angeles"
     }
   ]
 }
