--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.50.2",
     "cheerio": "^1.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.0.0",
     "next": "15.3.4",
     "react": "^19.0.0",
